test: refactor existing tests for better performance and accuracy